@@ -217,6 +217,8 @@ private:
 
   dhcp_cfg_t dhcp;
 
+  tftp_data_t tftp;
+
   int rx_timer_index;
   unsigned netdev_speed;
   unsigned tx_time;
@@ -298,6 +300,9 @@ bx_slirp_pktmover_c::bx_slirp_pktmover_c(const char *netif,
 
   this->rxh   = rxh;
   this->rxstat = rxstat;
+  strcpy(this->tftp.rootdir, netif);
+  this->tftp.tid = 0;
+  this->tftp.write = 0;
   Bit32u status = this->rxstat(this->netdev) & BX_NETDEV_SPEED;
   this->netdev_speed = (status == BX_NETDEV_1GBIT) ? 1000 :
                        (status == BX_NETDEV_100MBIT) ? 100 : 10;
@@ -392,7 +397,7 @@ bx_bool bx_slirp_pktmover_c::handle_ipv4(const Bit8u *buf, unsigned len)
   unsigned l4pkt_len;
   unsigned udp_sourceport;
   unsigned udp_targetport;
-  unsigned dhcp_reply_size;
+  unsigned udp_reply_size;
 
   // guest-to-host IPv4
   if (len < (14U+20U)) {
@@ -436,27 +441,31 @@ bx_bool bx_slirp_pktmover_c::handle_ipv4(const Bit8u *buf, unsigned len)
     if (l4pkt_len < 8) return 0;
     udp_sourceport = get_net2(&l4pkt[0]);
     udp_targetport = get_net2(&l4pkt[2]);
-    if (udp_targetport == 67) { // BOOTP
-      dhcp_reply_size = process_dhcp(netdev, &l4pkt[8], l4pkt_len-8, &reply_buffer[42], &dhcp);
-      if (dhcp_reply_size > 0) {
-        pending_reply_size = dhcp_reply_size + 42;
+    if ((udp_targetport == 67) || (udp_targetport == 69)) { // BOOTP & TFTP
+      if (udp_targetport == 67) { // BOOTP
+        udp_reply_size = process_dhcp(netdev, &l4pkt[8], l4pkt_len-8, &reply_buffer[42], &dhcp);
+      } else {
+        udp_reply_size = process_tftp(netdev, &l4pkt[8], l4pkt_len-8, udp_sourceport, &reply_buffer[42], &tftp);
+      }
+      if (udp_reply_size > 0) {
+        pending_reply_size = udp_reply_size + 42;
         // host-to-guest UDP IPv4: pseudo-header
         reply_buffer[22] = 0;
         reply_buffer[23] = 0x11; // UDP
-        put_net2(&reply_buffer[24], 8U+dhcp_reply_size);
+        put_net2(&reply_buffer[24], 8U+udp_reply_size);
         memcpy(&reply_buffer[26], dhcp.host_ipv4addr, 4);
         memcpy(&reply_buffer[30], dhcp.guest_ipv4addr, 4);
         // udp header
         put_net2(&reply_buffer[34], udp_targetport);
         put_net2(&reply_buffer[36], udp_sourceport);
-        put_net2(&reply_buffer[38], 8U+dhcp_reply_size);
+        put_net2(&reply_buffer[38], 8U+udp_reply_size);
         put_net2(&reply_buffer[40], 0);
-        put_net2(&reply_buffer[40], ip_checksum(&reply_buffer[22], 12U+8U+dhcp_reply_size) ^ (Bit16u)0xffff);
+        put_net2(&reply_buffer[40], ip_checksum(&reply_buffer[22], 12U+8U+udp_reply_size) ^ (Bit16u)0xffff);
         // ip header
         memset(&reply_buffer[14], 0, 20);
         reply_buffer[14] = 0x45;
         reply_buffer[15] = 0x00;
-        put_net2(&reply_buffer[16], 20U+8U+dhcp_reply_size);
+        put_net2(&reply_buffer[16], 20U+8U+udp_reply_size);
         put_net2(&reply_buffer[18], 1);
         reply_buffer[20] = 0x00;
         reply_buffer[21] = 0x00;
@@ -471,7 +480,7 @@ bx_bool bx_slirp_pktmover_c::handle_ipv4(const Bit8u *buf, unsigned len)
         put_net2(&reply_buffer[24], ip_checksum(&reply_buffer[14], l3header_len) ^ (Bit16u)0xffff);
         prepare_builtin_reply(ETHERNET_TYPE_IPV4);
       }
-      // don't forward DHCP request to Slirp
+      // don't forward DHCP / TFTP requests to Slirp
       return 1;
     }
   }
